DMP-3534: Rework test to remove incorrect setup